--- a/pom.xml
+++ b/pom.xml
@@ -51,18 +51,14 @@
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
-			<version>9.1.0</version>
+			<version>8.5.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analysis-common</artifactId>
-			<version>9.1.0</version>
-		</dependency>
+		
 		<!-- 中文分词 -->
 		<dependency>
-			<groupId>com.ossez</groupId>
+			<groupId>com.github.magese</groupId>
 			<artifactId>ik-analyzer</artifactId>
-			<version>3.2.8</version>
+			<version>8.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -86,4 +82,21 @@
 		</plugins>
 	</build>
 
+
+
+	<dependencyManagement>
+	
+
+		<dependencies>
+		
+
+			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>8.5.0</version>
+			</dependency>
+
+		</dependencies>
+
+	</dependencyManagement>
 </project>
