--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>ppgjcx</name>
-	<description>品牌国籍查询</description>
+	<description>品牌国籍查询 aa</description>
 
 	<properties>
 		<java.version>17</java.version>
