--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 			<artifactId>lucene-core</artifactId>
 			<version>8.5.0</version>
 		</dependency>
-		
+
 		<!-- 中文分词 -->
 		<dependency>
 			<groupId>com.github.magese</groupId>
@@ -61,6 +61,16 @@
 			<version>8.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>2.0.2.graal</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -83,12 +93,11 @@
 	</build>
 
 
-
 	<dependencyManagement>
-	
+
 
 		<dependencies>
-		
+
 
 			<dependency>
 				<groupId>org.apache.lucene</groupId>
