--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/h2db/ppgjcx
+spring.datasource.url=jdbc:h2:./h2db/ppgjcx
 spring.datasource.username=yeemin
 spring.datasource.password=yeemin$123
 spring.h2.console.enabled=true
